# PyEvoMotion

./: .gitignore  PyEvoMotion.core.html  PyEvoMotion.html  README.md  genindex.html  index.html  installation.html  modules.html  overview.html  py-modindex.html  pyproject.toml  search.html  setup.py
PyEvoMotion/: cli.py
PyEvoMotion/core/: base.py  core.py
_modules/PyEvoMotion/core/: parser.html
_sources/: PyEvoMotion.core.rst.txt  PyEvoMotion.rst.txt  installation.rst.txt  modules.rst.txt
docs/_build/html/: PyEvoMotion.core.html  PyEvoMotion.html  genindex.html  modules.html  objects.inv  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/PyEvoMotion/core/: base.html  core.html
docs/_build/html/_sources/: index.rst.txt  overview.rst.txt
docs/_build/markdown/: PyEvoMotion.core.md  PyEvoMotion.md  index.md  installation.md  modules.md  overview.md
doctrees/: PyEvoMotion.core.doctree  PyEvoMotion.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  overview.doctree
tests/: test_UK_USA_dataset.py  test_core.py  test_parser.py
tests/data/test1/: test1.sequences.fasta
tests/data/test3/: ids_sampled_for_figure.json
tests/helpers/: test_UK_USA_dataset_helpers.py
